--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-user=developer
-password=1234567
-dburl=jdbc:mysql://localhost:3306/coursejdbc
+user=desenvolvedor
+password=260115
+dburl=jdbc:mysql://localhost:3306/cursojdbc
 useSSL=false
